test/src/e2e_vm_tests/test_programs/should_fail/language/intrinsics/intrinsics_args_type_checking/src/main.sw
// TODO: Add tests for all intrinsics.
library;

mod storage_intrinsics;
mod arith_binop_intrinsics;
mod bitwise_binop_intrinsics;
mod encoding_intrinsics;
mod slice_intrinsics;
mod transmute_intrinsic;
mod dbg_intrinsic;
